[gd_scene load_steps=12 format=3 uid="uid://6nwca2xsjk7u"]

[ext_resource type="Script" uid="uid://cx66c4msdxhth" path="res://scripts/ui/card_widget.gd" id="1_as6gt"]
[ext_resource type="Theme" uid="uid://c66o12lhnitju" path="res://arts/themes/card_theme.tres" id="2_xncv4"]
[ext_resource type="Texture2D" uid="uid://c3q0etjfduq10" path="res://arts/slay_the_spire/images/cardui/cardui4.png" id="3_yoc8s"]
[ext_resource type="Texture2D" uid="uid://dkuxo06i7eq2y" path="res://arts/slay_the_spire/images/cards/cards3.png" id="5_gyuq2"]
[ext_resource type="Texture2D" uid="uid://cmbmwoicqtwrp" path="res://arts/slay_the_spire/images/cardui/cardui.png" id="7_1pxvw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0qi0x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fk0wn"]
atlas = ExtResource("3_yoc8s")
region = Rect2(644, 951, 299, 419)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_qtcfp"]
atlas = ExtResource("5_gyuq2")
region = Rect2(503, 1496, 250, 185)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_7iq4y"]
atlas = ExtResource("7_1pxvw")
region = Rect2(1190, 115, 269, 238)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_manol"]
atlas = ExtResource("7_1pxvw")
region = Rect2(1514, 36, 324, 77)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_pxr3y"]
atlas = ExtResource("7_1pxvw")
region = Rect2(1968, 1379, 72, 71)
filter_clip = true

[node name="PowerCard" type="MarginContainer"]
offset_right = 230.0
offset_bottom = 322.0
pivot_offset = Vector2(115, 161)
mouse_filter = 0
script = ExtResource("1_as6gt")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(230, 322)
layout_mode = 2
theme = ExtResource("2_xncv4")
theme_override_styles/panel = SubResource("StyleBoxEmpty_0qi0x")

[node name="BG_Texture" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_fk0wn")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Upper" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.61

[node name="IconPart" type="MarginContainer" parent="PanelContainer/VBoxContainer/Upper"]
layout_mode = 2
theme_override_constants/margin_top = 35
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/Upper/IconPart"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/VBoxContainer/Upper/IconPart/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.8
offset_right = 12.8
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.99
texture = SubResource("AtlasTexture_qtcfp")
expand_mode = 2
stretch_mode = 4

[node name="FramePart" type="MarginContainer" parent="PanelContainer/VBoxContainer/Upper"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 4

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/Upper/FramePart"]
layout_mode = 2

[node name="Frame" type="TextureRect" parent="PanelContainer/VBoxContainer/Upper/FramePart/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.2
texture = SubResource("AtlasTexture_7iq4y")
expand_mode = 2

[node name="CardType" type="Label" parent="PanelContainer/VBoxContainer/Upper/FramePart/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.949
anchor_right = 0.5
anchor_bottom = 0.949
offset_left = -25.0
offset_top = -17.463
offset_right = 25.0002
offset_bottom = 17.5371
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(25, 17.5)
theme_override_colors/font_color = Color(0.352941, 0.352941, 0.352941, 1)
theme_override_colors/font_shadow_color = Color(0.619608, 0.619608, 0.619608, 0.831373)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 24
text = "能力"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BannerPart" type="MarginContainer" parent="PanelContainer/VBoxContainer/Upper"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 20

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/Upper/BannerPart"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4

[node name="Banner" type="TextureRect" parent="PanelContainer/VBoxContainer/Upper/BannerPart/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -18.505
offset_right = 115.0
offset_bottom = 32.0523
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(115, 25)
texture = SubResource("AtlasTexture_manol")
expand_mode = 5
stretch_mode = 4

[node name="CardName" type="Label" parent="PanelContainer/VBoxContainer/Upper/BannerPart/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.96
offset_right = 0.889999
offset_bottom = -4.96
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(115.445, 27.5)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.964706, 0.886275, 1)
theme_override_colors/font_shadow_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_outline_color = Color(0.34902, 0.337255, 0.309804, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 40
text = "壁垒"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Lower" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="CostOrb" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.034
anchor_right = 0.06
anchor_bottom = 0.034
offset_left = -27.0
offset_top = -23.948
offset_right = 44.0
offset_bottom = 47.052
scale = Vector2(0.76, 0.76)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_pxr3y")
expand_mode = 1
stretch_mode = 4

[node name="Cost" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -166.83
offset_right = -86.0
offset_bottom = -130.83
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.228333, 0.218706, 0.199453, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 26
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
